# gslib

./: .travis.yml  CMakeLists.txt
config/: config.h.in
